# python-learning

./: README.md
homework/homework_01/: main.py
homework_01/: main.py
homework_02/: base.py  exceptions.py  plane.py
homework_03/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
homework_03/app/: main.py
homework_04/: jsonplaceholder_requests.py  main.py
homework_04/homework4/: pyvenv.cfg
homework_04/models/: __init__.py  base.py  db.py  post.py  user.py
homework_05/: .gitignore  app.py
homework_05/templates/: base.html  index.html
homework_05/templates/about/: index.html
homework_05/views/: about.py
