[tool.poetry]
name = "./homework-03"
version = "0.1.0"
description = ""
authors = ["Александр <alexwolf.k@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.30.6"
fastapi = {extras = ["uvicorn"], version = "^0.112.3"}

[tool.poetry.group.dev.dependencies]
fastapi = "^0.112.1"
typing-extensions = "^4.12.2"
sniffio = "^1.3.1"
annotated-types = "^0.7.0"
pydantic-core = "^2.20.1"
anyio = "^4.4.0"
starlette = "^0.38.2"
pydantic = "^2.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
